# log_project

./: CMakeLists.txt  Makefile  README.md
Logger/: CMakeLists.txt
Logger/include/: Logger.h
Logger/src/: Logger.cpp
LoggerDemo/: CMakeLists.txt
LoggerDemo/src/: main.cpp
buildReady/: ALL_BUILD.vcxproj.filters  cmake_install.cmake
buildReady/Logger/: cmake_install.cmake
buildReady/Logger/Logger.dir/Debug/Logger.tlog/: Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.2u.tlog
buildReady/LoggerDemo/: ALL_BUILD.vcxproj  LoggerDemo.sln  LoggerDemo.vcxproj
buildReady/LoggerDemo/LoggerDemo.dir/Debug/LoggerDemo.tlog/: Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  LoggerDemo.lastbuildstate  link.write.1.tlog
buildReady/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildReady/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
buildReady/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
build_ready/: CMakeCache.txt  LoggerProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_ready/Logger/Debug/Debug/: Logger.exp  Logger.lib
build_ready/Logger/Logger.dir/Debug/: Logger.dll.recipe  Logger.ilk
build_ready/Logger/Logger.dir/Debug/Logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog
build_ready/LoggerDemo/: cmake_install.cmake
build_ready/LoggerDemo/LoggerDemo.dir/Debug/: LoggerDemo.ilk
build_ready/LoggerDemo/LoggerDemo.dir/Debug/LoggerDemo.tlog/: CL.read.1.tlog  CL.write.1.tlog
(+3 files in other folders)
